app/assets/stylesheets/components/page_specific/_category_link_list.scss
/*
  Link list component
  Currently used on category pages to list out yellow underlined links
*/
.category-link-list {
  @extend .unstyled-list;
  @include body(22, 40);
  font-weight: bold;

  .l-category--image & {
    @include respond-to($mq-m) {
      width: 60%;
    }
  }
}

.category-link-list__heading {
  @include body(18, 30);
  color: $color-true-black;
  margin-top: $baseline_unit*6;
}

.category-link-list__item {
  display: inline;
  margin-right: $baseline_unit;

  &:before {
    // This is to override the highly specific .editorial list styling
    content: none !important;
  }
}

.category-link-list__item:after {
  content: ", ";
}

.category-link-list__item:last-child:after {
  content: none;
}

.category-link-list__item__link {
  border-bottom: 3px solid $color-yellow-dark;
  padding-bottom: 5px;

  &:focus,
  &:hover {
    border-bottom: 3px solid $color-true-black;
    text-decoration: none;
  }

  &:focus,
  &:link,
  &:visited,
  &:hover,
  &:active {
    color: $color-true-black;
  }
}

